--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,3 +9,13 @@ A **simple**, **powerful** and **flexible** site generation framework with every
 ## Documentation
 
 The documentation is available at [https://nextra.site](https://nextra.site).
+
+## Documentation
+
+The documentation is available at [https://nextra.site](https://nextra.site).
+
+### Subheading
+
+## Documentation
+
+The documentation is available at [https://nextra.site](https://nextra.site).
