--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,21 +1,21 @@
-# Introduction
+import { Tabs, Tab, Callout } from 'nextra-theme-docs'
+import Features from 'components/Features.tsx'
+import 'tailwindcss/tailwind.css';
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+<Features />
 
-## What is Nextra?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+And a lot [more](/docs/getting-started).
 
-## Documentation
+## Community
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+<p className="flex gap-2 h-6 mt-6">
+  <img alt="stars" src="https://badgen.net/github/stars/vercel/swr" />
+  <img alt="downloads" src="https://badgen.net/npm/dt/swr" />
+  <img alt="license" src="https://badgen.net/npm/license/swr" />
+</p>
 
-## Documentation
+SWR is created by the same team behind [Next.js](https://nextjs.org), the React framework.
+Follow [@vercel](https://twitter.com/vercel) on Twitter for future project updates.
 
-The documentation is available at [https://nextra.site](https://nextra.site).
-
-### Subheading
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+Feel free to join the [discussions on GitHub](https://github.com/vercel/swr/discussions)!
