--- a/pages/Pneumologie/pneumonie.mdx
+++ b/pages/Pneumologie/pneumonie.mdx
@@ -1,13 +1,55 @@
-# Pneumonie 
-
+# Pneumonie
 ## Definition & Klassifikation
+Eine Pneumonie bezeichnet eine Entzündung des **Alveolarraums und/oder des interstitiellen Lungengewebes**, die vornehmlich durch Bakterien verursacht wird. Sie stellt die häufigste zum Tode führende Infektionserkrankung in Industrienationen dar. Das Erregerspektrum unterscheidet sich je nach Altersgruppe und Infektionsursache (ambulant oder im Krankenhaus erworben). Die häufig durch Pneumokokken verursachte „klassische“ Pneumonie geht mit plötzlichem Krankheitsgefühl, Fieber und produktivem Husten einher. Auskultatorisch imponieren **feinblasige, klingende Rasselgeräusche** und laborchemisch erhöhte Entzündungsparameter.
 
+### Erregerspektrum
+<div className="text-sm mt-8">
+|Art der Pneumonie | Erregerspektrum|
+|:--------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Ambulant erworbene Pneumonie**   | Pneumokokken (häufigster Erreger bei jungen Erwachsenen) , Haemophilus influenzae (Impfstatus!), Mycoplasma pneumoniae und Chlamydia pneumoniae (Schulkindern und Jugendlichen) u.a. |
+| **Nosokomial erworbene Pneumonie** | Vor allem gramnegative Erreger (wie Pseudomonas aeruginosa und Enterobacteriaceae) und Staphylokokken                                                                                                                                                                                         |
+| **Pneumonie bei Immunsupression**  | Häufiger durch opportunistische oder bei Immunkompetenten nicht sehr virulente Erreger ausgelöst, z.B.Pneumocystis jirovecii, Aspergillus fumigatus, Candida species, Zytomegalievirus                                                                                                        |
+| **Neugeborenenpnuemonie**          | Escherichia coli, Streptokokken der Serogruppe B ( Streptococcus agalactiae ), Pneumokokken , Haemophilus influenzae  u.a.                                                                                                                                                            |
+</div>
+### Einteilung nach Klinik
+<div className="text-sm mt-8">
+
+|Art der Pneumonie |Klinik|
+|:--------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Ambulant erworbene Pneumonie**   | klassische Symptome wie Fieber, pneumonisches Husten, eitriger Auswurf, Tachypnoe, Rasselgeräusche, Perkussion|
+| **Nosokomial erworbene Pneumonie** | fehlende klassische Symptome, unauffällige Untersuchungsbefunde perkutorisch und auskultatorisch                                                                                                                                                                                         |
+</div>
 ## Pathophysiologie
-
+Infektion des Alveolarraums und Interstitiums.
 ## Klinik
+Abhängig von Art der Pneumonie:
+
+**Bei klassischer Pneumonie z.B. durch Pneumokokken:**
+- rascher Fieberanstieg mit AZ-Verschlechterung
+- Tachypnoe
+- Husten
+- typischer Auskultationsbefund: feinblasige RGs, abgeschw. AG
+- Perkussion 
+- hohe Entzündungsparameter: CRP, Leukozytose mit Linksverschiebung
+- Infiltrat im Röntgenbild
+- Besonderheit: Oft begleitend Herpes labialis, fortgeleitete Schmerzen in Ober- bis Unterbauch (insb. bei Kindern)
+
+**Bei atypischer Pneumonie z.B. durch Mykoplasmen:**
+- leichtes Fieber
+- Kopf- und Gliederschmerzen
+- trockener Husten
+- kaum erhöhte Entzündungsparameter
 
 ## Diagnostik
+- Anamnese
+- Klinische Untersuchung (Inspektion, Auskultation, Perkussion)
+- Labor 
+- Röntgenbild, ggf. Sonografie (Erguss?, Ausdehnung?, Punktionswürdigkeit?)
 
 ## Therapie
 
 ## Wichtiges
+
+## Quellen
+- [Amboss](https://www.amboss.com/de/wissen/Pneumonie/)
+
